[package]
name = "rust-basic-asyncwebserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-multipart = "0.6.0"
actix-session = "0.5"
actix-web = "4.3.1"
chrono = "0.4.26"
colored = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.28"
lazy_static = "1.4.0"
logger-rust = "0.2.12"
regex = "1.8.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.96"
syn = "2.0.18"
tera = "1.11.0"
uuid = { version = "1.7.0", features = ["v4"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
